--- a/template.yaml
+++ b/template.yaml
@@ -1,4 +1,26 @@
-AWSTemplateFormatVersion: '2010-09-09'
+AWSTemplateFormatVersion: "2010-09-09"
+
+Parameters:
+  DBUsername:
+    Description: "database master user."
+    Type: String
+    MinLength: 1
+    MaxLength: 63
+    Default: postgres
+    AllowedPattern: "^[a-zA-Z][a-zA-Z0-9_]{0,127}$"
+    ConstraintDescription: "1-63 letters/numbers and first character must be a letter."
+
+  DBPassword:
+    Description: "database master password."
+    Type: String
+    MinLength: 8
+    MaxLength: 128
+    NoEcho: true
+
+  DBName:
+    Description: "default database name."
+    Type: String
+    Default: archives
 
 Resources:
   VPC:
@@ -64,3 +86,45 @@ Resources:
     Properties:
       SubnetId: !Ref PublicSubnet
       RouteTableId: !Ref PublicRouteTable
+
+  # database instance
+  DBSubnetGroup:
+    Type: AWS::RDS::DBSubnetGroup
+    Properties:
+      DBSubnetGroupDescription: "subnet group for the archive db instance"
+      SubnetIds: 
+        - !Ref PrivateSubnetA
+        - !Ref PrivateSubnetB
+
+  DBSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: "security group for the archive db instance"
+      SecurityGroupIngress: 
+        - Description: "allow access to the db from within the vpc"
+          IpProtocol: tcp
+          FromPort: 5432
+          ToPort: 5432
+          SourceSecurityGroupId: "sg-0097d9dcdfdc50cd4"  # test-instance sg id
+      VpcId: !Ref VPC
+
+  DBInstance:
+    Type: AWS::RDS::DBInstance
+    Properties:
+      AllocatedStorage: 20
+      DBInstanceClass: db.t3.micro
+      DBName: !Ref DBName
+      DBSubnetGroupName: !Ref DBSubnetGroup
+      Engine: postgres
+      EngineVersion: 16.5
+      MasterUsername: !Ref DBUsername
+      MasterUserPassword: !Ref DBPassword
+      MultiAZ: false
+      PubliclyAccessible: false
+      VPCSecurityGroups:
+        - !Ref DBSecurityGroup
+
+Outputs:
+  DBEndpoint:
+    Description: "db instance endpoint"
+    Value: !GetAtt DBInstance.Endpoint.Address
