--- a/template.yaml
+++ b/template.yaml
@@ -55,12 +55,14 @@ Resources:
     Properties:
       VpcId: !Ref VPC
       CidrBlock: 10.0.16.0/20
+      AvailabilityZone: !Select [0, !GetAZs ""]
 
   PrivateSubnetB:
     Type: AWS::EC2::Subnet
     Properties:
       VpcId: !Ref VPC
       CidrBlock: 10.0.32.0/20
+      AvailabilityZone: !Select [1, !GetAZs ""] 
 
   ReservedSubnet:
     Type: AWS::EC2::Subnet
@@ -105,7 +107,7 @@ Resources:
           IpProtocol: tcp
           FromPort: 5432
           ToPort: 5432
-          SourceSecurityGroupId: "sg-0097d9dcdfdc50cd4"  # test-instance sg id
+          SourceSecurityGroupId: !Ref SGAccessDB
       VpcId: !Ref VPC
 
   DBInstance:
@@ -123,6 +125,147 @@ Resources:
       PubliclyAccessible: false
       VPCSecurityGroups:
         - !Ref DBSecurityGroup
+
+  SGAccessDB:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupName: lambda-db
+      GroupDescription: "allow entities to access db"
+      VPCId: !Ref VPC
+
+  # lambda: upload exam
+  RoleUploadExam:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: lambda.amazonaws.com
+            Action: sts:AssumeRole
+      Policies:
+        - PolicyName: S3AccessPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - s3:PutObject
+                Resource: "arn:aws:s3:::gromov/exams/*"
+              - Effect: Allow
+                Action:
+                  - ec2:CreateNetworkInterface
+                  - ec2:DescribeNetworkInterfaces
+                  - ec2:DeleteNetworkInterface
+                  - ec2:DescribeSubnets
+                  - ec2:DetachNetworkInterface
+                  - ec2:AssignPrivateIpAddresses
+                  - ec2:UnassignPrivateIpAddresses
+                Resource: "*"
+
+  LambdaUploadExam:
+    Type: AWS::Lambda::Function
+    Properties:
+      Code: 
+        S3Bucket: "gromov"
+        S3Key: "api/lambda/upload-exam/deployment.zip"
+      Environment:
+        Variables:
+          DB_USER: !Ref DBUsername
+          DB_PASSWORD: !Ref DBPassword
+          DB_NAME: !Ref DBName
+          DB_HOST: !GetAtt DBInstance.Endpoint.Address
+      FunctionName: upload-exam
+      Handler: lambda_function.lambda_handler
+      PackageType: Zip
+      Role: !GetAtt RoleUploadExam.Arn
+      Runtime: python3.11
+      Timeout: 15
+      VpcConfig:
+        SecurityGroupIds:
+          - !Ref SGAccessDB
+        SubnetIds:
+          - !Ref PublicSubnet
+
+  URLUploadExam:
+    Type: AWS::Lambda::Url
+    Properties:
+      AuthType: NONE
+      Cors:
+        AllowHeaders:
+          - "*"
+        AllowMethods:
+          - POST
+        AllowOrigins:
+          - "*"
+      TargetFunctionArn: !Ref LambdaUploadExam
+
+  # lambda: search courses
+  RoleSearchCourse:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: lambda.amazonaws.com
+            Action: sts:AssumeRole
+      # this is not strictly necessary. However, cloudformation was throwing
+      # an error if didn't put something in the SearchCourse policy.
+      Policies:
+        - PolicyName: vpc-access
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - ec2:CreateNetworkInterface
+                  - ec2:DescribeNetworkInterfaces
+                  - ec2:DeleteNetworkInterface
+                  - ec2:DescribeSubnets
+                  - ec2:DetachNetworkInterface
+                  - ec2:AssignPrivateIpAddresses
+                  - ec2:UnassignPrivateIpAddresses
+                Resource: "*"
+
+  LambdaSearchCourse:
+    Type: AWS::Lambda::Function
+    Properties:
+      Code: 
+        S3Bucket: "gromov"
+        S3Key: "api/lambda/search-course/deployment.zip"
+      Environment:
+        Variables:
+          DB_USER: !Ref DBUsername
+          DB_PASSWORD: !Ref DBPassword
+          DB_NAME: !Ref DBName
+          DB_HOST: !GetAtt DBInstance.Endpoint.Address
+      FunctionName: search-courses
+      Handler: lambda_function.lambda_handler
+      PackageType: Zip
+      Role: !GetAtt RoleSearchCourse.Arn
+      Runtime: python3.11
+      Timeout: 15
+      VpcConfig:
+        SecurityGroupIds:
+          - !Ref SGAccessDB
+        SubnetIds:
+          - !Ref PublicSubnet
+
+  URLSearchCourse:
+    Type: AWS::Lambda::Url
+    Properties:
+      AuthType: NONE
+      Cors:
+        AllowHeaders:
+          - "Content-Type"
+        AllowMethods:
+          - GET
+        AllowOrigins:
+          - "*"
+      TargetFunctionArn: !Ref LambdaSearchCourse
 
 Outputs:
   DBEndpoint:
