--- a/template.yaml
+++ b/template.yaml
@@ -31,7 +31,7 @@ Resources:
       EnableDnsHostnames: true
       Tags:
         - Key: Name
-          Value: gromov
+          Value: cartan
 
   InternetGateway:
     Type: AWS::EC2::InternetGateway
@@ -181,7 +181,7 @@ Resources:
               - Effect: Allow
                 Action:
                   - s3:PutObject
-                Resource: "arn:aws:s3:::gromov/exams/*"
+                Resource: "arn:aws:s3:::cartan.xyz/exams/*"
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
 
@@ -189,8 +189,8 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       Code: 
-        S3Bucket: "gromov"
-        S3Key: "api/lambda/upload-exam/deployment.zip"
+        S3Bucket: "cartan.xyz"
+        S3Key: "lambda/upload-exam/deployment.zip"
       Environment:
         Variables:
           DB_USER: !Ref DBUsername
@@ -221,7 +221,7 @@ Resources:
         AllowMethods:
           - POST
         AllowOrigins:
-          - "*"
+          - "cartan.xyz"
       TargetFunctionArn: !Ref LambdaUploadExam
 
   InvokeUploadExamPermission:
@@ -233,7 +233,7 @@ Resources:
       Principal: "*"
 
   # lambda: search courses
-  RoleSearchCourse:
+  RoleBasicExecution:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
@@ -252,8 +252,8 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       Code: 
-        S3Bucket: "gromov"
-        S3Key: "api/lambda/search-course/deployment.zip"
+        S3Bucket: "cartan.xyz"
+        S3Key: "lambda/search-course/deployment.zip"
       Environment:
         Variables:
           DB_USER: !Ref DBUsername
@@ -263,7 +263,7 @@ Resources:
       FunctionName: search-courses
       Handler: lambda_function.lambda_handler
       PackageType: Zip
-      Role: !GetAtt RoleSearchCourse.Arn
+      Role: !GetAtt RoleBasicExecution.Arn
       Runtime: python3.11
       Timeout: 15
       VpcConfig:
@@ -280,11 +280,11 @@ Resources:
       AuthType: NONE
       Cors:
         AllowHeaders:
-          - "Content-Type"
+          - "*"
         AllowMethods:
           - GET
         AllowOrigins:
-          - "*"
+          - "cartan.xyz"
       TargetFunctionArn: !Ref LambdaSearchCourse
 
   InvokeSearchCoursePermission:
@@ -292,6 +292,54 @@ Resources:
     Properties:
       Action: lambda:invokeFunctionUrl
       FunctionName: !Ref LambdaSearchCourse
+      FunctionUrlAuthType: NONE
+      Principal: "*"
+
+  # lambda: detail course
+  LambdaDetailCourse:
+    Type: AWS::Lambda::Function
+    Properties:
+      Code: 
+        S3Bucket: "cartan.xyz"
+        S3Key: "lambda/get-course-detail/deployment.zip"
+      Environment:
+        Variables:
+          DB_USER: !Ref DBUsername
+          DB_PASSWORD: !Ref DBPassword
+          DB_NAME: !Ref DBName
+          DB_HOST: !GetAtt DBInstance.Endpoint.Address
+      FunctionName: get-course-detail
+      Handler: lambda_function.lambda_handler
+      PackageType: Zip
+      Role: !GetAtt RoleBasicExecution.Arn
+      Runtime: python3.11
+      Timeout: 15
+      VpcConfig:
+        SecurityGroupIds:
+          - !Ref SGAccessDB
+        SubnetIds:
+          - !Ref PrivateSubnetA
+          - !Ref PrivateSubnetB
+          - !Ref PublicSubnet
+
+  URLDetailCourse:
+    Type: AWS::Lambda::Url
+    Properties:
+      AuthType: NONE
+      Cors:
+        AllowHeaders:
+          - "*"
+        AllowMethods:
+          - GET
+        AllowOrigins:
+          - "cartan.xyz"
+      TargetFunctionArn: !Ref LambdaDetailCourse
+
+  InvokeDetailCoursePermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      Action: lambda:invokeFunctionUrl
+      FunctionName: !Ref LambdaDetailCourse
       FunctionUrlAuthType: NONE
       Principal: "*"
 
@@ -307,3 +355,7 @@ Outputs:
   LambdaSearchCourseURL:
     Description: "url to course search functionality"
     Value: !GetAtt URLSearchCourse.FunctionUrl
+
+  LambdaDetailCourseURL:
+    Description: "url to course dktail functionality"
+    Value: !GetAtt URLDetailCourse.FunctionUrl
